crates/varyk/tests/snapshots/errors__v0100_const_rust_function.snap
---
source: crates/varyk/tests/errors.rs
expression: stderr
---
error[V0100]: cannot find function `ext::total`
 --> crates/varyk/tests/fixtures/errors/v0100_const_rust_function/main.vr:4:20
  |
4 |     println!("{}", ext::total());
  |                    ^^^^^^^^^^ cannot find function `ext::total`
  |
  = note: `total` exists in the Rust file but is `const`; Varyk does not import such functions
