crates/varyk/tests/snapshots/errors__v0100_opaque_enum_variant.snap
---
source: crates/varyk/tests/errors.rs
expression: stderr
---
error[V0100]: Varyk cannot construct or match `ext::Shape::Point`
 --> crates/varyk/tests/fixtures/errors/v0100_opaque_enum_variant/main.vr:4:13
  |
4 |     let s = ext::Shape::Point;
  |             ^^^^^^^^^^^^^^^^^ Varyk cannot construct or match `ext::Shape::Point`
  |
  = note: `Shape` has a variant, `Circle`, with named fields, which Varyk does not import yet, so Varyk can pass a `Shape` around but cannot build one or look inside it; make one with a function in the `.rs` file
