crates/varyk/tests/snapshots/errors__v0100_restricted_rust_method.snap
---
source: crates/varyk/tests/errors.rs
expression: stderr
---
error[V0100]: type `Tally` has no method `bump`
 --> crates/varyk/tests/fixtures/errors/v0100_restricted_rust_method/main.vr:5:7
  |
5 |     t.bump();
  |       ^^^^ type `Tally` has no method `bump`
  |
  = note: `bump` is `pub(crate)` in the Rust file; Varyk imports only plain `pub`, so write `pub fn bump` in the Rust file
